# backend-api/src/swagger.yaml
@@ -16,6 +16,8 @@ paths:
     get:
       description: Testa se o token do usuário é válido
       summary: Testa se o token do usuário é válido
+      tags: 
+        - Users
       security: [{bearerAuth: []}]
       responses:
         '200':
@@ -33,6 +35,8 @@ paths:
     post:
       description: Criar um novo cliente
       summary: Criar um novo cliente
+      tags: 
+        - Users
       requestBody:
         required: true
         content:
@@ -78,6 +82,8 @@ paths:
     post:
       description: Autenticar um usuário
       summary: Autenticar um usuário
+      tags: 
+        - Users
       requestBody:
         required: true
         content:
@@ -113,6 +119,8 @@ paths:
     post:
       description: Renovar o token de acesso
       summary: Renovar o token de acesso
+      tags: 
+        - Users
       requestBody:
         required: true
         content:
@@ -147,6 +155,8 @@ paths:
     post:
       description: Cadastrar novo carro
       summary: Cadastrar novo carro
+      tags: 
+        - Cars
       security: [{bearerAuth: []}]
       requestBody:
         required: true
@@ -185,6 +195,8 @@ paths:
     get:
       description: Retorna todos os carros cadastrados
       summary: Retorna todos os carros cadastrados
+      tags: 
+        - Cars
       security: [{bearerAuth: []}]
       responses:
         '200':
@@ -197,4 +209,80 @@ paths:
           content:
             application/json:
               example: { "error": "Token inválido ou expirado" }
-  
+  /cars-delete/{id}:
+    delete:
+      description: Deleta o carro equivalente ao id informado
+      summary: Deleta o carro equivalente ao id informado
+      tags: 
+        - Cars
+      security: [{bearerAuth: []}]
+      parameters: 
+        - name: id
+          in: path
+          required: true
+          description: O id do carro que deve ser excluido
+          schema:
+            type: string
+            minimum: 1 
+      responses:
+        '200':
+          description: Carro excluído com sucesso.
+          content:
+            application/json:
+              example: Carro excluído com sucesso
+        '404': 
+          description: Carro não encontrado.
+          content:
+            application/json:
+              example: O carro cujo o id se refere não foi encontrado
+        '500': 
+          description: Erro no servidor ao excluir carro.
+          content:
+            application/json:
+              example: Erro no servidor ao tentar excluir carro
+  /cars-upadate/{id}:
+    put:
+      description: Altera o carro que tiver o id informado
+      summary: Altera o carro que tiver o id informado
+      tags: 
+        - Cars
+      security: [{bearerAuth: []}]
+      parameters: 
+        - name: id
+          in: path
+          required: true
+          description: O id do carro que deve ser alterado
+          schema:
+            type: string
+            minimum: 1 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            example:
+              modelo: "Gol Special 1.2 2020"
+              marca: "Volkswagen"
+              n_marchas: "6"
+              preco: "32.000 R$"
+      responses:
+        '200':
+          description: Carro alterado com sucesso.
+          content:
+            application/json:
+              example:
+                car:
+                  id: 1 
+                  modelo: "Gol Special 1.2 2020"
+                  marca: "Volkswagen"
+                  n_marchas: "6"
+                  preço: "32.000 R$"   
+        '404': 
+          description: Carro não encontrado.
+          content:
+            application/json:
+              example: O carro cujo o id se refere não foi encontrado
+        '500': 
+          description: Erro no servidor ao alterar carro.
+          content:
+            application/json:
+              example: Erro no servidor ao tentar alterar o carro
